--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -36,6 +36,22 @@
         </div>
     </nav>
     <!--  End NavBar -->
+    <!-- Start Header -->
+    <header id="header">
+        <div class="overlay">
+            <div class="container">
+                <div class="row text-center">
+                    <div class="col">
+                        <h1 style="margin-top: 250px;" class="display-3">Bootstrap Responsive Web Pages</h1>
+                        <p class="text-muted">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        </p>
+                        <button type="button" name="button" class="btn btn-outline-secondary">Action</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- End Header -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
