--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -8,6 +8,8 @@
     <title>Bootstrap Project</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Style .css -->
+    <link rel="stylesheet" href="/Bootstrap/css/style.css">
 </head>
 
 <body>
@@ -42,7 +44,7 @@
             <div class="container">
                 <div class="row text-center">
                     <div class="col">
-                        <h1 style="margin-top: 250px;" class="display-3">Bootstrap Responsive Web Pages</h1>
+                        <h1 class="display-3">Bootstrap Responsive Web Pages</h1>
                         <p class="text-muted">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                         </p>
                         <button type="button" name="button" class="btn btn-outline-secondary">Action</button>
