--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -14,7 +14,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Style .css -->
-    <link rel="stylesheet" href="/Bootstrap/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/e3d5d5442e.js" crossorigin="anonymous"></script>
+    <!-- Font Awesome -->
 </head>
 
 <body>
@@ -44,7 +47,7 @@
     </nav>
     <!--  End NavBar -->
     <!-- Start Header -->
-    <header id="header">
+    <Header id="header">
         <div class="overlay">
             <div class="container">
                 <div class="row text-center">
@@ -52,13 +55,36 @@
                         <h1 class="display-3">Bootstrap Responsive Web Pages</h1>
                         <p class="text-muted">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                         </p>
-                        <button type="button" name="button" class="btn btn-outline-secondary">Action</button>
+                        <button class="btn btn-outline-secondary px-3">Action</button>
                     </div>
                 </div>
             </div>
         </div>
-    </header>
+    </Header>
     <!-- End Header -->
+    <!-- Features Section -->
+    <section id="feature" class="pt-5">
+        <div class="container">
+            <div class="row mt-5">
+                <div class="col-md-4 text-center">
+                    <i class="fa-brands fa-odnoklassniki fa-4x"></i>
+                    <h3 class="mt-3">Easy Learning</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+                <div class="col-md-4 text-center">
+                    <i class="fa-solid fa-rocket fa-4x"></i>
+                    <h3 class="mt-3">Innovative Technology</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+                <div class="col-md-4 text-center">
+                    <i class="fa-solid fa-comment-dots fa-4x"></i>
+                    <h3 class="mt-3">Support</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Features Section -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
